<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="pref_version"
        android:title="@string/str_Preferences_version_title" /><Preference
        android:key="pref_serialNumber"
        android:title="@string/str_Preferences_serialNumber_title" /><Preference
        android:key="pref_userID"
        android:title="@string/str_Preferences_userID_title" />
    <Preference
        android:key="pref_issuetracker"
        android:title="@string/str_Preferences_openIssueTracker_title" android:summary="@string/str_Preferences_openIssueTracker_sum"/>
    <Preference
        android:key="pref_changelog"
        android:title="@string/str_Preferences_showChangelog_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_checkUpdate"
        android:summary="@string/str_Preferences_checkUpdate_sum"
        android:title="@string/str_Preferences_checkUpdate_title" />

    <Preference
        android:key="pref_newUpdateAvailable"
        android:summary="@string/str_Preferences_newUpdateAvailable_sum"
        android:title="@string/str_Preferences_newUpdateAvailable_title" />

</PreferenceScreen>