<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/changePass_layout_margin"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity" >

    <TableRow
        android:id="@+id/COPtableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_changePass_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_holo_light_blue"
            android:textSize="@dimen/enable_bt_font_title" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:rowCount="4" >

        <TableRow
            android:id="@+id/COPtableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom" >

            <TableRow
                android:id="@+id/COPtableRow4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_changePass_cancelButton"
                    android:textSize="@dimen/enable_bt_button_text" />
            </TableRow>

            <TableRow
                android:id="@+id/COPtableRow5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_changePass_applyButton"
                    android:textSize="@dimen/enable_bt_button_text" />
            </TableRow>
        </TableRow>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/COPtableRow3"
            android:layout_alignParentTop="true" >

            <EditText
                android:id="@+id/newPassEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:hint="@string/str_changePass_newPass"
                android:imeOptions="actionNext|actionPrevious"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/oldPassEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/newPassEdit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:hint="@string/str_changePass_oldPass"
                android:imeOptions="actionNext"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/equalIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/confirmPassEdit"
                android:layout_alignParentRight="true"
                android:layout_below="@id/newPassEdit"
                android:scaleType="centerInside"
                android:src="@drawable/ic_error" />

            <EditText
                android:id="@+id/confirmPassEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_below="@id/newPassEdit"
                android:layout_toLeftOf="@id/equalIndicator"
                android:hint="@string/str_changePass_confirmNewPass"
                android:imeOptions="actionDone|actionPrevious"
                android:inputType="textPassword" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>