<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_xlarge" >

            <TextView
                android:id="@+id/txt_discoveryState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <com.maksl5.bl_hunt.custom_ui.PatternProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="false"
                    android:minHeight="1dip"
                    android:minWidth="200dip"
                    android:progress="35"
                    android:progressDrawable="@drawable/bh_progress_bar" />

                <TextView
                    android:id="@+id/lvlIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="7"
                    android:textSize="@dimen/levelIndicator_text"
                    android:textStyle="bold" />

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/expIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView" />
        </TableRow>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xsmall"
                    android:text="@string/str_discovery_devices"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_xsmall"
                    android:text="Devices:" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xsmall"
                    android:text="@string/str_discovery_devExpPerDay"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devExpPerDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_xsmall"
                    android:text="Devices / Exp per day:" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xsmall"
                    android:text="@string/str_discovery_devExpToday"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_holo_light_blue"
                    android:textSize="@dimen/foundDevices_manufacturer_text"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_devExpToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_xsmall"
                    android:text="Devices / Exp today:" />

            </TableRow>

        </TableLayout>

    </TableLayout>

</LinearLayout>